# zotero-research-assistant

./: .gitignore  README.md  SKILL.md  model_server.py  pyproject.toml  test_colqwen3_macos.py  workspace.py  zotero-query.py
configs/: corpus.yaml  reranker.yaml  retriever-image.yaml  retriever-text.yaml
